# quark

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  README.md  debug.sh  release.sh
conf/: bot.conf  btcusd.conf  demons.ini  quark.conf  quark.xinetd  rpc.conf
debian/: changelog  control  quark.conffiles  quark.postinst  quark.postrm  quark.substvars  rules
doc/: cz-build  cz-install.md
docker/: doc.md  quark-answers.example  run.sh
src/: version.h
src/bot/: CMakeLists.txt  main.cpp
src/common/: config.h  dispatcher.h  lexid.h  msgqueue.h  runtime_error.h  semaphore.h  watchdog.h
src/create/: CMakeLists.txt  main.cpp
src/jsonrpc_netcat/: CMakeLists.txt  main.cpp
src/purgedb/: CMakeLists.txt  main.cpp
src/quark/: CMakeLists.txt  asyncrpcclient.cpp  asyncrpcclient.h  blockedBudget.cpp  blockedBudget.h  couchDBLogProvider.cpp  couchDBLogProvider.h  error.cpp  error.h  imoneyservice.h  imoneysrvclient.h  init.cpp  init.h  logfile.cpp  logfile.h  main.cpp  marginPosition.cpp  marginPosition.h  marginTradingSvc.cpp  marginTradingSvc.h  markedConfig.cpp  markedConfig.h  marketConfig.cpp  marketConfig.h  mockupmoneyserver.cpp  mockupmoneyserver.h  moneyServerClient.cpp  moneyServerClient.h  moneyServerClient2.cpp  moneyServerClient2.h  moneyService.cpp  moneyService.h  orderBudget.cpp  orderBudget.h  orderRangeError.cpp  orderRangeError.h  pendingOrders.h  positionTracker.cpp  positionTracker.h  quarkApp.cpp  (+7 more)
src/quark/designdocs/: .gitignore  Makefile  bin2c.c  couchcpp.cfg  orderbook.design.cpp  orderbook.design.deps  orderbook.design.h  orderbook.design.json  users.design.cpp  users.design.deps  users.design.h  users.design.json
src/quark/designdocs/index.design/: _id
src/quark/designdocs/index.design/filters/: cleanup.js  orderbook.js  queue.js  replication.js  stream.js  waitfordoc.js
src/quark/designdocs/index.design/views/active/: map.js
src/quark/designdocs/index.design/views/orderbook/: map.js
src/quark/designdocs/index.design/views/queue/: map.js
src/quark/designdocs/index.design/views/scheduler/: map.js
src/quark/designdocs/index.design/views/users/: map.js
src/quark/designdocs/orderbook.design/: _id
src/quark/designdocs/orderbook.design/views/all/: map.js
src/quark/designdocs/orderbook.design/views/ask/: map.cpp
src/quark/designdocs/orderbook.design/views/bid/: map.cpp  reduce.cpp
src/quark/designdocs/orderbook.design/views/levels-0/: map.js  reduce.js
src/quark/designdocs/orderbook.design/views/levels-5/: map.js
src/quark/designdocs/orders.design/: _id
src/quark/designdocs/orders.design/filters/: error.js  removeError.cpp  stream.cpp
src/quark/designdocs/orders.design/updates/: order.cpp
src/quark/designdocs/orders.design/views/queue/: map.cpp  map.js
src/quark/designdocs/positions.design/: _id
src/quark/designdocs/positions.design/filters/: stream.js
src/quark/designdocs/positions.design/views/counter/: map.js
src/quark/designdocs/trades.design/: _id
src/quark/designdocs/trades.design/filters/: cleanup.js  replication.js  stream.cpp  stream.js
src/quark/designdocs/trades.design/views/byOrder/: map.js
src/quark/designdocs/trades.design/views/byUser/: map.js
src/quark/designdocs/trades.design/views/chart/: map.cpp  map.js  reduce.cpp  reduce.js
src/quark/designdocs/trades.design/views/counter/: map.cpp
src/quark/designdocs/users.design/views/active/: map.cpp  map.js
src/quark/designdocs/users.design/views/budget/: map.cpp  reduce.cpp
src/quark_init/: main.cpp
src/quark_lib/: CMakeLists.txt  ITradeResult.cpp  ITradeResult.h  JSONStream.cpp  JSONStream.h  constants.cpp  constants.h  core.cpp  core.h  engineState.cpp  engineState.h  order.cpp  order.h  orderErrorException.cpp  orderErrorException.h
src/quark_test/: CMakeLists.txt  main.cpp
src/rpc/: CMakeLists.txt  fnv128.cpp  fnv128.h  main.cpp  marketControl.cpp  marketControl.h  orderControl.cpp  orderControl.h  rpcApp.cpp  rpcApp.h
src/rpc/testFiles/: bad-createOrder.jsonrpc  init.jsonrpc  lastId.jsonrpc  ordersStream.jsonrpc  valid-createOrder.jsonrpc
tests/: basicpair.json  basicpair2.json  basicpair3.json  basicpair3rollback.json
